# traiter

./: .dev_env.bash  .gitignore  .mypy.ini  .pre-commit-config.yaml  .pydocstyle  .pylintrc  .python-version  .style.yapf  .travis.yml  00_add_columns.ipynb  00_add_columns.py  01_extract_sex.py  02_extract_life_stage.py  03_extract_total_length.py  04_extract_body_mass.py  LICENSE  MANIFEST.in  Makefile  Parse.pm  README  README.md  app.py  dev_env.bash  efloras.py  extract.py  extracted_words.py  importer.py  label_babel.ipynb  label_babel.py  label_babel_spacy.ipynb  label_babel_stacked_regex.ipynb  normalize.py  parse.pl  parser.py  pylib  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  requirements_dev.txt  (+8 more)
.github/linters/: .python-lint
.github/workflows/: codeql-analysis.yml  python-app.yml  python-package.yml  superlinter.yml
Traiter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
data/: US_counties.csv  US_states.csv  itis_plant_families.csv  itis_plant_genera.csv  name_parts.csv
docs/: Chipmunk_Taxonomy_Synonomy.csv  Chipmunk_Trait_Ontology.csv  trait-extraction.md
docs/efloras/: Trait_term_reconciliation.xlsx  flower_extraction_instructions.docx  plant_checklist.docx
docs/schema/: diagram.dia  ingest_vertnet.py  sqlite.sql
docs/vertnet/: Repro_Trait_Ontology.ods
ingests/: vertnet.py
lib/: GCS_cleaner.py  all_traits.py  as_is_trait.py  base.py  base_reader.py  base_trait.py  bigquery_loader.py  body_mass_trait.py  check_harvest_folder_GCS.py  convert_units.py  csv_reader.py  csv_sampler.py  csv_writer.py  ear_length_trait.py  field_utils.py  file_parser.py  harvest_profiler.py  harvest_record_processor.py  harvest_resource_processor.py  harvest_utils.py  harvestoutputfields.txt  hind_foot_length_trait.py  lexer.py  life_stage_trait.py  numeric.py  numeric_parse_mixin.py  numeric_parser_mixin.py  numeric_trait.py  numeric_trait_mixin.py  parse.py  parse_result.py  parsed_numeric_mixin.py  parsed_trait.py  process_vertnet_latest_amphibians-GCS.sh  process_vertnet_latest_birds-GCS.sh  process_vertnet_latest_fishes-GCS.sh  process_vertnet_latest_mammals-GCS.sh  process_vertnet_latest_reptiles-GCS.sh  record_parser.py  regexp.py  (+25 more)
lib/data/: resource_staging.csv
lib/env/: pip-selfcheck.json
lib/googleapis/: BigQuery.py  CloudStorage.py  GoogleAPI.py  MapsEngine.py
lib/lexers/: base.py  base_lexer.py  lex_base.py  lex_body_mass.py  lex_life_stage.py  lex_sex.py  lex_testes_state.py  lex_total_length.py  life_stage.py  life_stage_lexer.py  sex.py  sex_lexer.py  shared_lex_rules.py  shared_regex.py  shared_regex_defines.py  shared_regexp.py  shared_utils.py  testes_state.py  testes_state_lexer.py  total_length.py  util.py
lib/old_parsers/: common_regexp.py
lib/parsers/: any_value.py  as_is.py  base.py  base_parser.py  body_mass.py  convert_units.py  ear_length.py  hind_foot_length.py  life_stage.py  life_stage_parser.py  numeric_parser_mixin.py  parse_base.py  parse_body_mass.py  parse_life_stage.py  parse_sex.py  parse_testes_state.py  parse_total_length.py  reducers.py  regexp.py  rule_builder_mixin.py  sex.py  sex_parser.py  shared_reducers.py  shared_tokens.py  shared_unit_conversions.py  tail_length.py  testes_size.py  testes_state.py  testes_state_parser.py  token.py  total_length.py  unit_conversions.py
lib/readers/: base_reader.py  csv_reader.py  read_base.py  read_csv.py
lib/templates/: html_writer.html
lib/tests/: test_body_mass_parser.py  test_life_stage_parser.py  (+2 more)
notebooks/: vertnet_parser.ipynb  vertnet_parser_old_v0.2.ipynb
old/: base_trait.py  bigquery_loader.py  check_harvest_folder_GCS.py  csv_sampler.py  harvest_profiler.py  harvest_utils.py  shared_trait_patterns.py  slugify.py  slugify_test.py  vn_utils.py
parsers/: vertnet_parse.ipynb  vertnet_parser.ipynb
pylib/: all_traits.py  file_parser.py  numeric_trait.py  record_parser.py  shared_patterns.py  shared_reproductive_patterns.py  trait.py  util.py
schema/: sqlite.sql  tables.sql
src/: traiter.c  traiter.h  traiter.l  traiter.y  traiter.yy.c
templates/: traiter.html
tests/: conftest.py  old_test_life_stage.py  old_test_sex.py  old_test_testes_state.py  old_test_total_length.py  setup.py  test_as_is_trait.py  test_base_lexer.py  test_base_parser.py  test_base_trait.py  test_body_mass.py  test_body_mass_parser.py  test_body_mass_trait.py  test_build.py  test_ear_length_trait.py  test_hind_foot_length_trait.py  test_in_phrases.py  test_life_stage.py  test_life_stage_parser.py  test_life_stage_trait.py  test_literals.py  test_matcher.py  test_matcher_old.py  test_regexp.py  test_replace.py  test_replace_old.py  test_scan.py  test_scanner.py  test_sentence.py  test_sex.py  test_sex_parser.py  test_sex_trait.py  test_spell_well.py  test_testes_size_trait.py  test_testes_state.py  test_testes_state_lexer.py  test_testes_state_parser.py  test_testes_state_trait.py  test_tokenizer.py  test_tokenizer_util.py  (+4 more)
traiter/: actions.py  all_traits.py  catalog.py  compile_patterns.py  compile_pipeline.py  compile_terms.py  compile_traits.py  const.py  consts.py  convert_units.py  create_spell_well_db_idigbio.py  create_spell_well_from_idigbio.py  create_term_db.py  dependency_compiler.py  entity_data_util.py  file_parser.py  fragment_matcher.py  itis_terms.py  linker_utils.py  log.py  matcher.py  matcher_compiler.py  merge_terms.py  nlp.py  numeric_parse_mixin.py  numeric_trait.py  numeric_trait_mixin.py  parse.py  parser.py  pattern.py  pattern_compiler.py  pattern_util.py  patterns.py  patterns_.py  patterns_to_entity_ruler.py  pdf.py  pipe_util.py  pipeline.py  record_parser.py  rule.py  (+18 more)
traiter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
traiter_efloras/: downloader.py  efloras.py  shared_patterns.py  trait_groups.py  util.py
traiter_label_babel/: label_babel.py
traiter_shared/: db.py  file_parser.py  patterns.py  record_parser.py  temp_dir.py  trait.py  util.py
traiter_vertnet/: all_traits.py  numeric.py  reproductive.py  shared_patterns.py  shared_reproductive_patterns.py  trait.py  vertnet.py
util/: update_pyproject_toml.py
(+1030 files in other folders)
